クラスベースのviewに変更
